simplify to one template.

--- a/examples/extra-links.html
+++ b/examples/extra-links.html
@@ -16,15 +16,6 @@
   <!-- end -->
 </head>
 <body>
-  <!-- header -->
-  <a id='replace-header'href='http://library.nd.edu'>Hesburgh Library</a>
-  <!-- end -->
-
-  FAKE PAGE CONTENT
-
-  <!-- footer -->
-  <a id='replace-footer'/>
-  <!-- end -->
-
+  <div>FAKE PAGE CONTENT</div>
 </body>
 </html>
