--- a/examples/basic.html
+++ b/examples/basic.html
@@ -2,8 +2,7 @@
 <head>
   <title>FAKE PAGE TITLE</title>
   <!-- include files -->
-  <link href='http://localhost:3001/assets/style.css' rel='stylesheet' type='text/css' />
-  <script src='http://localhost:3001/assets/code.js' type='text/javascript'></script>
+  <script src='https://resources.library.nd.edu/frame/code.js' type='text/javascript'></script>
   <script>
     document.addEventListener("DOMContentLoaded", function(event) {
       documentReady();
