- Added extra titles example - Fixed the mangle to exclude the .href and .title properties that are being passed into the documentReady function - Changed the structure of the additional titles a bit so that the class names are part of the header.html, not injected by the code, so that they will get properly mangled.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <ol>
     <li><a href='./examples/basic.html'>Basic Example</a></li>
     <li><a href='./examples/extra-links.html'>Extra Links Example</a></li>
+    <li><a href='./examples/extra-titles.html'>Extra Titles Example</a></li>
 </ol>
 </body>
 </html>
