--- a/examples/basic.html
+++ b/examples/basic.html
@@ -2,7 +2,7 @@
 <head>
   <title>FAKE PAGE TITLE</title>
   <!-- include files -->
-  <script src='/template/code.js' type='text/javascript'></script>
+  <script src='/mangler/toBuild/dist/code.js' type='text/javascript'></script>
   <script>
     document.addEventListener("DOMContentLoaded", function(event) {
       documentReady();
