--- a/examples/extra-links.html
+++ b/examples/extra-links.html
@@ -2,7 +2,7 @@
 <head>
   <title>FAKE PAGE TITLE</title>
   <!-- include files -->
-  <script src='https://resources.library.nd.edu/frame/code.js' type='text/javascript'></script>
+  <script src='/mangler/toBuild/dist/code.js' type='text/javascript'></script>
   <script>
     document.addEventListener("DOMContentLoaded", function(event) {
       const links = [
