Implement alerts. Improve dev environment.

--- a/examples/alerts.html
+++ b/examples/alerts.html
@@ -6,15 +6,13 @@
   <script src='/template/code.js' type='text/javascript'></script>
   <script>
     document.addEventListener("DOMContentLoaded", function(event) {
-      const titles = [
-        { title: 'Sublibrary Title', href: 'http://google.com'}
-      ]
-      documentReady([], titles);
+      documentReady(null, null, 'illiad');
     });
   </script>
   <!-- end -->
 </head>
 <body>
   <div>FAKE PAGE CONTENT</div>
+  <div>If no alerts are showing, change the site (in this example file) to one that has an active alert in Contentful.</div>
 </body>
 </html>
