--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <li><a href='./examples/basic.html'>Basic Example</a></li>
     <li><a href='./examples/extra-links.html'>Extra Links Example</a></li>
     <li><a href='./examples/extra-titles.html'>Extra Titles Example</a></li>
+    <li><a href='./examples/alerts.html'>Alerts Example</a></li>
 </ol>
 </body>
 </html>
