--- a/examples/basic.html
+++ b/examples/basic.html
@@ -2,7 +2,8 @@
 <head>
   <title>FAKE PAGE TITLE</title>
   <!-- include files -->
-  <script src='../template/code.js' type='text/javascript'></script>
+  <script type="text/javascript">var DRAPES_TEMPLATE_ROOT = '/template'</script>
+  <script src='/template/code.js' type='text/javascript'></script>
   <script>
     document.addEventListener("DOMContentLoaded", function(event) {
       documentReady();
