--- a/examples/extra-titles.html
+++ b/examples/extra-titles.html
@@ -2,7 +2,10 @@
 <head>
   <title>FAKE PAGE TITLE</title>
   <!-- include files -->
-  <script type="text/javascript">var DRAPES_TEMPLATE_ROOT = '/template'</script>
+  <script type="text/javascript">
+    var DRAPES_TEMPLATE_ROOT = '/template';
+    var DEV_ENV = true;
+  </script>
   <script src='/template/code.js' type='text/javascript'></script>
   <script>
     document.addEventListener("DOMContentLoaded", function(event) {
